# typo_robust_analysis

./: .env.example  .gitignore  README.md  pyproject.toml
_sample_project/: README.md  pyproject.toml
_sample_project/analysis/: sweep.py
_sample_project/analysis/figures/: .gitkeep
_sample_project/configs/: proposed_method.yaml  repro_baseline.yaml
_sample_project/experiments/proposed/: run.py
_sample_project/experiments/reproduction/: run.py
_sample_project/src/sample_project/: __init__.py  runner.py
_sample_project/tests/: test_runner.py
projects/quant-typo-neuron/: README.md  pyproject.toml
projects/quant-typo-neuron/analysis/: analyze.ipynb  dashboard.py
projects/quant-typo-neuron/configs/: base_eval.yaml  quant_eval.yaml  quantization.yaml  typo_eval.yaml
projects/quant-typo-neuron/experiments/: run_eval.py
projects/quant-typo-neuron/scripts/: e2e_test.sh  e2e_test_quant.sh  prepare_calibration_data.py  prepare_few_shot.py  quantize_all.sh  quantize_e2e.sh  quantize_model.py  run_all.sh
projects/quant-typo-neuron/src/quant_typo_neuron/: __init__.py  few_shot.py  output.py  runner.py
projects/quant-typo-neuron/tests/: test_analysis.py  test_benchmark_base.py  test_few_shot.py  test_gen_benchmarks.py  test_mc_benchmarks.py  test_quantize_scripts.py  test_run_eval.py  test_runner.py
projects/quant_typo_neuron/: README.md  pyproject.toml
projects/quant_typo_neuron/analysis/: analyze.ipynb
projects/quant_typo_neuron/configs/: base.yaml  m0.yaml  m1.yaml  m2.yaml  neuron_identification.yaml  quantization.yaml  robustness_evaluation.yaml
projects/quant_typo_neuron/data/: .gitkeep
projects/quant_typo_neuron/experiments/m0/: ablation_gate.py  build_dataset.py  identify.py  stability_gate.py
projects/quant_typo_neuron/experiments/m1/: quantize.py  weight_diff.py
projects/quant_typo_neuron/experiments/m2/: evaluate.py
projects/quant_typo_neuron/experiments/neuron_identification/: ablation_gate.py  build_dataset.py  identify.py  stability_gate.py
projects/quant_typo_neuron/experiments/quantization/: quantize.py  weight_diff.py
projects/quant_typo_neuron/experiments/robustness_evaluation/: evaluate.py
projects/quant_typo_neuron/results/: .gitkeep
projects/quant_typo_neuron/src/quant_typo_neuron/: __init__.py  contracts.py
projects/quant_typo_neuron/tests/: test_bnb.py  test_contracts.py  test_eval_runner.py  test_evaluate_cli.py  test_gptq_awq.py  test_gpu.py  test_heads.py  test_quantize_cli.py  test_schema.py  test_scoring.py  test_stability_gate.py  test_tasks.py  test_weight_diff.py  test_weight_diff_cli.py  test_wordnet_id.py
projects/typo-cot/: .gitignore  README.md  pyproject.toml
projects/typo-cot/analysis/a2_restore_audit/: leak_stratification.json  leak_stratification.md  verdict.json  verdict.md
projects/typo-cot/analysis/exp10_natural_typo/: ab_comparison.json  ab_comparison.md
projects/typo-cot/analysis/exp11_chain_mediation/: README.md  dump_qwen_dedup_exclude.py  (+5 more)
projects/typo-cot/configs/: natural_typo_distribution.json  paths.yaml  registry.yaml
projects/typo-cot/docs/: all_results_by_setting.md  architecture.drawio  attnlrp_mechanism.drawio  data_provenance.md  dev_notes_01_03_transplant.md  dev_notes_02_target_deletion.md  dev_notes_04_fixed_target.md  dev_notes_05_matched_control.md  dev_notes_06_attribution.md  dev_notes_07_correctors.md  dev_notes_08_fine.md  dev_notes_08_patching.md  dev_notes_09_inner_repair.md  dev_notes_10_scope.md  dev_notes_15_patch_freegen.md  dev_notes_exp10_math500.md  dev_notes_exp10_natural_typo.md  dev_notes_exp10_scope.md  dev_notes_step0.md  discussion_family_effects.md  experiment_details.md  experiment_flow.drawio  experiment_plan.md  experiments_11_18_plan.md  followup_plan_20260719.md  hypothesis_registry.md  implementation_reference.md  improvement_plan.md  loo_definition_survey.md  paper_outline.md  rebuttal_draft.md  size_ladder_plan.md  v1_run_manifest.md  work_items.md
projects/typo-cot/scripts/: _run_in_tmux.sh  aggregate_exp13.py  analyze_attribution_family.py  analyze_fixed_target_delta.py  analyze_loo_rankings.py  build_figures_tables.py  compute_loo_concentration.py  generate_example_heatmaps.py  run_analysis.py  run_appendix_analysis.py  run_attention_concentration.py  run_attribution_family.py  run_attribution_family_queue.sh  run_exp13_attention_queue.sh  run_exp13_loo_queue.sh  run_fixed_target.py  run_full_pipeline.sh  run_inference.py  run_inference_reasoning.py  run_loo_production_queue.sh  run_loo_scoring.py  run_perturbation.py  run_v2_extended_pipeline.sh  run_v2_parallel.sh  step0_build_master_table.py  step0_smoke_reproduce.py  upload_to_wandb.py
projects/typo-cot/tests/: conftest.py  test_analyze_attribution_family.py  test_analyze_loo_rankings.py  test_archive_reader.py  test_attribution_family.py  test_concentration.py  test_config.py  test_cot_editor.py  test_data_loader.py  test_defense_analysis.py  test_defense_correctors.py  test_defense_restoration.py  test_defense_sharding.py  test_defense_within_run.py  test_deletion_runner.py  test_deletion_stats.py  test_exp15_aggregate.py  test_exp2_cli.py  test_extractor.py  test_fine_analysis.py  test_fixed_stats.py  test_fixed_target.py  test_fixed_target_math.py  test_intervention_analysis.py  test_intervention_archive_loader.py  test_intervention_cell_builder.py  test_intervention_divergence.py  test_intervention_free_generation.py  test_intervention_leak_audit.py  test_intervention_patching.py  test_intervention_patching_fine.py  test_intervention_reasoning_cells.py  test_intervention_runner.py  test_loo_scorer.py  test_lrp_analyzer.py  test_master_builder.py  test_master_table.py  test_matched_control.py  test_matched_dataset.py  test_matched_sampler.py  (+27 more)
utils/: pyproject.toml
utils/src/typo_utils/: __init__.py  config.py  llm.py  paths.py  seed.py
utils/tests/: test_calibration.py  test_config.py  test_llm.py  test_metrics.py  test_neurons_hooks.py  test_quant_base.py  test_quant_loader.py  test_quant_qep.py  test_quant_rtn.py  test_typo.py  test_typo_real.py  test_vllm_runner.py
(+438 files in other folders)
