[project]
name = "sample-project"
version = "0.1.0"
description = "Template project for LLM typo-robustness experiments"
requires-python = ">=3.12"
dependencies = ["typo-utils"]

[project.optional-dependencies]
llm = ["typo-utils[llm]"]
tracking = ["typo-utils[tracking]"]

[dependency-groups]
dev = ["pytest>=8", "ipykernel>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_project"]

[tool.uv.sources]
typo-utils = { workspace = true }
