[project]
name = "typo-utils"
version = "0.1.0"
description = "Shared utilities for LLM typo-robustness experiments"
requires-python = ">=3.12"
dependencies = [
    "omegaconf>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
# LLM 実験で実モデルを使うとき
llm = ["torch", "transformers>=4.44", "datasets>=2.20"]
# W&B でトラッキングするとき
tracking = ["wandb>=0.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typo_utils"]
