[project]
name = "quant-typo-neuron"
version = "0.1.0"
description = "Measuring the impact of LLM quantization on typo robustness"
requires-python = ">=3.12"
dependencies = ["typo-utils"]

[project.optional-dependencies]
llm = ["typo-utils[llm]"]
vllm = ["typo-utils[llm]", "vllm>=0.8"]
quant = ["llmcompressor>=0.5.0"]
tracking = ["typo-utils[tracking]"]

[dependency-groups]
dev = ["pytest>=8", "ipykernel>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_typo_neuron"]

[tool.uv.sources]
typo-utils = { workspace = true }
