[project]
name = "typo-cot"
version = "0.1.0"
description = "Typo/CoT two-axis analysis (AttnLRP importance-guided perturbation) — ARR August 2026 resubmission experiments"
requires-python = ">=3.12"
dependencies = [
    "typo-utils",
    # 旧 JSAI2026 リポジトリ由来の解析系依存（GPU 不要のパスで必要）
    "pydantic>=2",
    "scipy>=1.13",
    "pingouin>=0.5.5",
    "tqdm>=4.65",
    # 実験9 (inner lexicon 修復スコア): 回帰 (GLM cluster-robust SE) と Zipf 頻度
    "statsmodels>=0.14",
    "wordfreq>=3.1",
]

[project.optional-dependencies]
# 生成・AttnLRP 帰属（Phase 1/3）。lxt は transformers を monkey-patch する
lrp = [
    "typo-utils[llm]",
    "lxt>=2.1",
    "accelerate>=0.20",
    "sentencepiece>=0.2.1",
    "protobuf>=4",
]
# Appendix 分析（POS タグ付け・ワードクラウド）
appendix = ["spacy>=3.8", "wordcloud>=1.9"]
# W&B アップロード（scripts/upload_to_wandb.py）
tracking = [
    "typo-utils[tracking]",
    "plotly>=5",
    "python-dotenv>=1",
    "watchdog>=6",
]

[dependency-groups]
dev = ["pytest>=8", "ipykernel>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typo_cot"]

[tool.uv.sources]
typo-utils = { workspace = true }
