[project]
name = "typo-cot"
version = "0.1.0"
description = "Typo/CoT two-axis analysis (AttnLRP importance-guided perturbation) — ARR August 2026 resubmission experiments"
requires-python = ">=3.12"
dependencies = [
    "typo-utils",
    # 旧 JSAI2026 リポジトリ由来の解析系依存（GPU 不要のパスで必要）
    "pydantic>=2",
    "scipy>=1.13",
    "pingouin>=0.5.5",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# 生成・AttnLRP 帰属（Phase 1/3）。lxt は transformers を monkey-patch する
lrp = [
    "typo-utils[llm]",
    "lxt>=2.1",
    # lxt 2.1 は transformers 5.x で削除された API
    # (pytorch_utils.find_pruneable_heads_and_indices 等) に依存するため上限を固定
    "transformers>=4.52,<5",
    "accelerate>=0.20",
    "sentencepiece>=0.2.1",
    "protobuf>=4",
]
# Appendix 分析（POS タグ付け・ワードクラウド）
appendix = ["spacy>=3.8", "wordcloud>=1.9"]
# 実験5（双子語統制）: 層化マッチング用の特徴量（頻度・POS・埋め込み中心性）
matched = [
    "wordfreq>=3.0",
    "spacy>=3.8",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "sentence-transformers>=3",
]
# W&B アップロード（scripts/upload_to_wandb.py）
tracking = [
    "typo-utils[tracking]",
    "plotly>=5",
    "python-dotenv>=1",
    "watchdog>=6",
]

[dependency-groups]
dev = ["pytest>=8", "ipykernel>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# matched extra の en-core-web-sm (spaCy モデル) を wheel URL 直接参照で入れるため
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/typo_cot"]

[tool.uv.sources]
typo-utils = { workspace = true }
