[project]
name = "typo-cot"
version = "0.1.0"
description = "Typo/CoT two-axis analysis (AttnLRP importance-guided perturbation) — ARR August 2026 resubmission experiments"
requires-python = ">=3.12"
dependencies = [
    "typo-utils",
    # 旧 JSAI2026 リポジトリ由来の解析系依存（GPU 不要のパスで必要）
    "pydantic>=2",
    "scipy>=1.13",
    "pingouin>=0.5.5",
    "tqdm>=4.65",
    # 実験2: matched-random 標的の頻度マッチングと置換語彙 (Zipf 頻度)
    "wordfreq>=3.1",
]

[project.optional-dependencies]
# 生成・AttnLRP 帰属（Phase 1/3）。lxt は transformers を monkey-patch する
lrp = [
    "typo-utils[llm]",
    "lxt>=2.1",
    # lxt 2.1 は transformers 5.x で削除された API
    # (pytorch_utils.find_pruneable_heads_and_indices 等) に依存するため上限を固定
    "transformers>=4.52,<5",
    # rebuttal 参照 (.pt スコア) とビット一致再現のため archive/JSAI2026 の
    # uv.lock と同じ torch に固定 (torch 2.12 では bf16 カーネル差で
    # top10 Jaccard < 1.0 になるサンプルが出る)
    "torch==2.9.1",
    "accelerate>=0.20",
    "sentencepiece>=0.2.1",
    "protobuf>=4",
]
# Appendix 分析（POS タグ付け・ワードクラウド）
appendix = ["spacy>=3.8", "wordcloud>=1.9"]
# W&B アップロード（scripts/upload_to_wandb.py）
tracking = [
    "typo-utils[tracking]",
    "plotly>=5",
    "python-dotenv>=1",
    "watchdog>=6",
]

[dependency-groups]
dev = ["pytest>=8", "ipykernel>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typo_cot"]

[tool.uv.sources]
typo-utils = { workspace = true }
